[gd_scene load_steps=8 format=3 uid="uid://dom5tyfk1in3q"]

[ext_resource type="Script" uid="uid://c7lvju4x5a3pa" path="res://game/scenes/debug/CharacterOffsetter.gd" id="1_q8ujq"]
[ext_resource type="Texture2D" uid="uid://dave1imbc216x" path="res://assets/images/leGrid.png" id="3_0k3qt"]
[ext_resource type="Shader" uid="uid://bh2xopks8xxis" path="res://game/resources/shaders/scroll.gdshader" id="3_f84mi"]
[ext_resource type="Texture2D" uid="uid://daba84ejgj2x1" path="res://assets/images/ui/cross.png" id="4_7buq4"]
[ext_resource type="FontFile" uid="uid://dnssbi7hjccim" path="res://assets/fonts/vcr.ttf" id="4_e8b0o"]
[ext_resource type="Script" uid="uid://ba5ivc6samb40" path="res://game/objects/ui/Icon.gd" id="5_36ais"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3m81g"]
shader = ExtResource("3_f84mi")
shader_parameter/direction = Vector2(1, 1)
shader_parameter/speed_scale = 0.05

[node name="CharacterOffsetting" type="Node2D"]
script = ExtResource("1_q8ujq")

[node name="Backdrop" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_3m81g")
position = Vector2(634, 364)
texture = ExtResource("3_0k3qt")
region_enabled = true
region_rect = Rect2(0, 0, 1300, 800)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Reset" type="Button" parent="UILayer"]
modulate = Color(1, 0, 0, 1)
offset_left = 1133.0
offset_top = 344.0
offset_right = 1250.0
offset_bottom = 375.0
focus_mode = 0
text = "RESET"

[node name="Save" type="Button" parent="UILayer"]
modulate = Color(0, 1, 1, 1)
offset_left = 950.0
offset_top = 345.0
offset_right = 1067.0
offset_bottom = 376.0
focus_mode = 0
text = "SAVE Json"

[node name="Main" type="ColorRect" parent="UILayer"]
custom_minimum_size = Vector2(300, 300)
offset_left = 950.0
offset_top = 15.0
offset_right = 1250.0
offset_bottom = 335.0
color = Color(0.194349, 0.194349, 0.194349, 1)

[node name="Shadow" type="Panel" parent="UILayer/Main"]
show_behind_parent = true
layout_mode = 0
offset_left = -238.0
offset_right = -2.0
offset_bottom = 134.0

[node name="Frame" type="HSlider" parent="UILayer/Main/Shadow"]
layout_mode = 0
offset_left = 7.0
offset_top = 108.0
offset_right = 228.0
offset_bottom = 124.0
focus_mode = 0
max_value = 10.0

[node name="Txt" type="Label" parent="UILayer/Main/Shadow/Frame"]
layout_mode = 0
offset_left = -7.0
offset_top = -28.0
offset_right = 229.0
offset_bottom = -5.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 20
text = "Frame: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimSelect" type="MenuButton" parent="UILayer/Main/Shadow"]
layout_mode = 0
offset_left = 41.0
offset_top = 13.0
offset_right = 199.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("4_e8b0o")
action_mode = 1
text = "Change Animation"
flat = false

[node name="Anim" type="Label" parent="UILayer/Main/Shadow"]
layout_mode = 0
offset_top = 48.0
offset_right = 236.0
offset_bottom = 71.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 20
text = "none"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Color" type="ColorPickerButton" parent="UILayer/Main/Shadow"]
layout_mode = 0
offset_top = 135.0
offset_right = 236.0
offset_bottom = 167.0
focus_mode = 1
mouse_default_cursor_shape = 2
text = "Shadow Color"
color = Color(0.3, 0.3, 0.3, 0.6)

[node name="Center" type="CheckBox" parent="UILayer/Main"]
visible = false
layout_mode = 0
offset_left = -224.0
offset_top = 131.0
offset_right = -17.0
offset_bottom = 162.0
focus_mode = 0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
text = "Centered Offsetting"

[node name="Anti" type="CheckBox" parent="UILayer/Main"]
layout_mode = 0
offset_left = 5.0
offset_top = 285.0
offset_right = 146.0
offset_bottom = 316.0
focus_mode = 0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
text = "Antialiasing"

[node name="FacesLeft" type="CheckBox" parent="UILayer/Main"]
layout_mode = 0
offset_left = 160.0
offset_top = 285.0
offset_right = 292.0
offset_bottom = 316.0
focus_mode = 0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
text = "Facing Left"

[node name="ScaleBox" type="SpinBox" parent="UILayer/Main"]
layout_mode = 0
offset_left = 10.0
offset_top = 235.0
offset_right = 138.0
offset_bottom = 266.0
min_value = 0.1
max_value = 10.0
step = 0.01
value = 1.0
prefix = "Scale:"

[node name="IconSelect" type="MenuButton" parent="UILayer/Main"]
layout_mode = 0
offset_left = 11.0
offset_top = 55.0
offset_right = 123.0
offset_bottom = 86.0
theme_override_fonts/font = ExtResource("4_e8b0o")
action_mode = 1
text = "Change Icon"
flat = false

[node name="Highlight" type="ColorRect" parent="UILayer/Main/IconSelect"]
custom_minimum_size = Vector2(105, 105)
layout_mode = 0
offset_left = -940.0
offset_top = 520.0
offset_right = -835.0
offset_bottom = 625.0
color = Color(0, 1, 0, 0.392157)

[node name="Lowlight" type="ColorRect" parent="UILayer/Main/IconSelect"]
custom_minimum_size = Vector2(105, 105)
layout_mode = 0
offset_left = -835.0
offset_top = 520.0
offset_right = -730.0
offset_bottom = 625.0
color = Color(1, 1, 0, 0.392157)

[node name="Icon" type="Sprite2D" parent="UILayer/Main/IconSelect"]
position = Vector2(-939, 472)
script = ExtResource("5_36ais")

[node name="CharacterSelect" type="MenuButton" parent="UILayer/Main"]
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 289.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("4_e8b0o")
action_mode = 1
text = "Change Character"
flat = false

[node name="CurCharLabel" type="Label" parent="UILayer/Main/CharacterSelect"]
visible = false
layout_mode = 0
offset_left = 165.0
offset_top = 3.0
offset_right = 255.0
offset_bottom = 26.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
text = "bf"
vertical_alignment = 1

[node name="Pos" type="Label" parent="UILayer/Main"]
layout_mode = 0
offset_left = 10.0
offset_top = 165.0
offset_right = 151.0
offset_bottom = 188.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 16
text = "Position Offset"

[node name="X" type="SpinBox" parent="UILayer/Main/Pos"]
layout_mode = 0
offset_top = 20.0
offset_right = 83.0625
offset_bottom = 51.0
min_value = -9999.0
max_value = 9999.0
update_on_text_changed = true

[node name="Y" type="SpinBox" parent="UILayer/Main/Pos"]
layout_mode = 0
offset_left = 90.0
offset_top = 20.0
offset_right = 173.063
offset_bottom = 51.0
min_value = -9999.0
max_value = 9999.0
update_on_text_changed = true

[node name="Cam" type="Label" parent="UILayer/Main"]
layout_mode = 0
offset_left = 10.0
offset_top = 100.0
offset_right = 151.0
offset_bottom = 123.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 16
text = "Camera Offset"

[node name="X" type="SpinBox" parent="UILayer/Main/Cam"]
layout_mode = 0
offset_top = 20.0
offset_right = 83.0625
offset_bottom = 51.0
min_value = -9999.0
max_value = 9999.0
update_on_text_changed = true

[node name="Y" type="SpinBox" parent="UILayer/Main/Cam"]
layout_mode = 0
offset_left = 90.0
offset_top = 20.0
offset_right = 173.063
offset_bottom = 51.0
min_value = -9999.0
max_value = 9999.0
update_on_text_changed = true

[node name="Lock" type="CheckBox" parent="UILayer/Main/Cam"]
layout_mode = 0
offset_left = 179.0
offset_top = 20.0
offset_right = 282.0
offset_bottom = 51.0
tooltip_text = "Lock Camera's position to the cross"
focus_mode = 0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
text = "Lock Cam"

[node name="FileDialog" type="FileDialog" parent="UILayer/Main"]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.res")

[node name="Animations" type="Node2D" parent="UILayer"]

[node name="CurData" type="Control" parent="UILayer"]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 432.0
offset_top = 15.0
offset_right = 681.0
offset_bottom = 182.0

[node name="ColorRect" type="ColorRect" parent="UILayer/CurData"]
visible = false
layout_mode = 0
offset_left = 1.0
offset_right = 249.0
offset_bottom = 168.0

[node name="Anim" type="Label" parent="UILayer/CurData"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.648
anchor_bottom = 0.14
offset_left = 1.0
offset_right = 87.648
offset_bottom = 2.62
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 25
text = "No Anim Playing"
horizontal_alignment = 1

[node name="Frame" type="Label" parent="UILayer/CurData"]
layout_mode = 0
offset_left = 1.0
offset_top = 39.0
offset_right = 249.0
offset_bottom = 88.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 25
text = "Frame
? / ?"
horizontal_alignment = 1

[node name="Offset" type="Label" parent="UILayer/CurData"]
layout_mode = 0
offset_left = 1.0
offset_top = 106.0
offset_right = 249.0
offset_bottom = 129.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 25
text = "[0 | 0]"
horizontal_alignment = 1

[node name="Warn" type="Label" parent="UILayer/CurData"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 1.0
offset_top = 136.0
offset_right = 249.0
offset_bottom = 159.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 20
text = "No .res file exists"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Anim" type="ColorRect" parent="UILayer"]
custom_minimum_size = Vector2(300, 300)
offset_left = 950.0
offset_top = 385.0
offset_right = 1250.0
offset_bottom = 685.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="AnimSpeed" type="HSlider" parent="UILayer/Anim"]
layout_mode = 0
offset_left = 74.0
offset_top = 11.0
offset_right = 289.0
offset_bottom = 27.0
focus_mode = 0
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="Label" type="Label" parent="UILayer/Anim/AnimSpeed"]
layout_mode = 0
offset_left = -65.0
offset_top = -4.0
offset_right = -6.0
offset_bottom = 19.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 20
text = "Speed"
vertical_alignment = 1

[node name="Weee!!" type="Label" parent="UILayer"]
visible = false
offset_left = 10.0
offset_top = 680.0
offset_right = 561.0
offset_bottom = 703.0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_e8b0o")
theme_override_font_sizes/font_size = 20
text = "Successfully SAVED json at '../characters/data/%s'"

[node name="Cam" type="Camera2D" parent="."]
position = Vector2(624, 360)

[node name="Point" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(568, 368)
scale = Vector2(5, 5)
texture = ExtResource("4_7buq4")

[connection signal="pressed" from="UILayer/Save" to="." method="save_pressed"]
[connection signal="value_changed" from="UILayer/Main/Shadow/Frame" to="." method="shadow_frame_change"]
[connection signal="color_changed" from="UILayer/Main/Shadow/Color" to="." method="shadow_color_changed"]
